Issue 30886:  - Fix variable description wrapping that was broken by previous fix.

--- a/app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
+++ b/app/Connector/packages/connector-theme/sass/var/view/_Learn.scss
@@ -585,6 +585,7 @@ img.detail-has-data-small {
     }
   }
 
+  .variable-list-row-header,
   .variable-list-row-normal {
     height: 123px;
     border-bottom: 1px solid $heat-scale-4;
